# mono-qwen27

./: .gitignore  ANALYSIS.md  CMakeLists.txt  LLAMA_CPP_ALIGNMENT.md  Makefile  OPTIMIZATION.json  OPTIMIZATION_PROGRESS.md  OPTIMIZATION_SUMMARY.md  PLAN.md  README.md  SESSION_SUMMARY.md  SSMO_OPTIMIZATION_ANALYSIS.md  STATUS.md  autoresearch.ideas.md  autoresearch.jsonl  compact.md  config.json  kernel_config.json  review.md  session_summary.md  task.md
.commandcode/taste/: taste.md
debug/: check_eps.cpp  check_gguf  check_gguf.cpp  mono_give_current.debug.tsv  official_dequant  official_dequant.c  read_gguf.py  read_kv  read_kv.cpp  ref_give_b1.trace.tsv  rms_norm_check.py  test_ssm_layer.cpp
debug/session2/: mono_clean.debug.tsv  mono_clean.trace.tsv
debug/verify/: Makefile  attn_norm_full.txt  check_decode_scaling.sh  check_q6k_sanity.py  compare_all.py  compare_e2e.py  compare_intermediates.py  compare_intermediates_last.py  compare_ref.py  compare_text.py  embed_full.txt  extract_data.py  run_all_checks.py  ssm_ref_test.cpp  test_kernels  test_kernels.cu  test_q5k_matvec.py  trace_utils.py  verify_deltanet.py  verify_mrope.py  verify_q6k_full.py  verify_q6k_ref.py  verify_q6k_wqkv.py  verify_rms_norm.py
include/: mono27b_cli.h  mono27b_config.h  mono27b_format.h  mono27b_gguf.h  mono27b_packer.h  mono27b_tokenizer.h  mono27b_utils.h
scripts/: compare_perf.py
src/: mono27b_blob.cpp  mono27b_chat.cpp  mono27b_cli.cpp  mono27b_executor.cu  mono27b_gguf.cpp  mono27b_pack.cpp  mono27b_packer.cpp  mono27b_tokenizer.cpp
(+1 files in other folders)
